# stride

./: .gitignore  .pre-commit-config.yaml  database.db  open_topics.md  pre-commit-config.yaml  pyproject.toml  readme.rst
notebooks/: get_complete_history.ipynb  usage_example.py
src/stride/: __init__.py  cli.py  config.py  constants.py  enums.py
src/stride/connection/: strava.py
src/stride/connections/: strava.py
src/stride/data/: dev_stridedb.db  stridedb.db
src/stride/database/: app.py  database.py  explore_sqlalchemy.py  explore_sqlmodel.py  explore_sqlmodel_strava.py  models.py
src/stride/provider/strava/: __init__.py  cli.py  connection.py  endpoints.py  main.py  models.py
src/stride/strava/: __init__.py  activities.py  connection.py  endpoints.py  main.py  models.py
src/stride/stridedb/: __init__.py  database.py  models.py
src/stride/stridedb/converters/: __init__.py  base.py  coros.py  service.py  strava.py
