[project]
name = "stride"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels Ota", email = "ota.niels@bcg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.4",
    "typer>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
