[project]
name = "stride"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels Ota", email = "ota.niels@bcg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "requests>=2.32.3",
    "typer>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.8",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[project.scripts]
stride = "stride.cli:app"
